Beginning of track list import UI. Other improvements.

--- a/imports/ui/nav/Navigation/Navigation.scss
+++ b/imports/ui/nav/Navigation/Navigation.scss
@@ -1,6 +1,8 @@
-.navbar {
+@import '../../stylesheets/variables';
+
+.App .navbar {
   border-radius: 0;
-  border-left: none;
-  border-right: none;
-  border-top: none;
+  border-style: none;
+  @include seperator-bottom;
+  padding-bottom: 0;
 }
