--- a/imports/ui/page/App/App.scss
+++ b/imports/ui/page/App/App.scss
@@ -1,7 +1,7 @@
 @import '../../stylesheets/variables';
 
 body {
-  background-color: #4b4543;
+  background-color: #000;
   margin: 0;
   padding: 0;
 }
