Narrower cover image cell in tracklist

--- a/imports/ui/music/TrackList/TrackList.scss
+++ b/imports/ui/music/TrackList/TrackList.scss
@@ -56,6 +56,7 @@
           }
         }
 
+        &.album-image, &.header-Cover,
         &.duration, &.header-Length {
           width: 5.5em;
         }
