--- a/imports/ui/music/Track/Track.scss
+++ b/imports/ui/music/Track/Track.scss
@@ -1,3 +1,6 @@
+@import '../../stylesheets/variables';
+
+
 .Track {
   margin: 0.5em 0;
 
@@ -10,6 +13,53 @@
   &.inline-context {
     & > * {
       margin: 0 1em;
+    }
+  }
+
+  /* TODO Inline layout and remove some details on small screens */
+  .trackLists {
+    display: table;
+    table-layout:fixed;
+    width: 100%;
+    margin-top: 1em;
+    @include seperator-top;
+
+    .TrackList, .header-row {
+      display: table-row;
+
+      & > * {
+        display: table-cell;
+        margin: 0;
+
+        @include seperator-bottom;
+        padding: 0.5em 1em;
+
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+
+        &.inline-list > * {
+          display: inline-block;
+          white-space: nowrap;
+          margin-right: 0.5em;
+
+          &:after {
+            content: ',';
+          }
+          &:last-child:after {
+            content: '';
+          }
+
+          & > * {
+            display: inline-block;
+            margin-right: 0;
+          }
+        }
+
+        &.date, &.header-Date {
+          width: 8em;
+        }
+      }
     }
   }
 }
