Cleanup remnants of TrackList and TrackListList

--- a/imports/ui/music/Import/Import.scss
+++ b/imports/ui/music/Import/Import.scss
@@ -20,11 +20,11 @@
       }
     }
 
-    .import-spec-playlistlist {
+    .import-spec-tag {
       display: flex;
       align-items:center;
       flex-wrap: wrap;
-      .playlistlist {
+      .tag {
         width: 20em;
       }
     }
