--- a/imports/ui/music/PlayList/PlayList.scss
+++ b/imports/ui/music/PlayList/PlayList.scss
@@ -4,13 +4,13 @@
 .PlayList {
   margin: 0.5em 0;
 
-  &.page-context {
+  &.page-viewtype {
     & > * {
       margin: 0.5em 0;
     }
   }
 
-  &.inline-context {
+  &.inline-viewtype {
     & > * {
       margin: 0 1em;
     }
