Add mass playlist import from CSV file. Use jobs to link to other services. Bug fixes.

--- a/imports/ui/music/Import/Import.scss
+++ b/imports/ui/music/Import/Import.scss
@@ -70,15 +70,12 @@
         vertical-align: middle;
       }
 
-      .import-pending {
-        display: flex;
-        align-items: center;
-        font-style: italic;
-        &> * {
-          margin-right: 1em;
-        }
+      .waiting {
+        font-weight: bold;
       }
-
+      .error {
+        color: $cb-red;
+      }      
       .PlayList {
         font-weight: bold;
       }
