--- a/imports/ui/music/Tag/Tag.scss
+++ b/imports/ui/music/Tag/Tag.scss
@@ -4,7 +4,7 @@
 .Tag {
   &.page-viewtype {
     margin: 0.5em 0;
-    
+
     & > * {
       margin: 0.5em 0;
     }
@@ -18,46 +18,7 @@
 
   /* TODO Inline layout and remove some details on small screens */
   .playlists {
-    display: table;
-    table-layout:fixed;
-    width: 100%;
-
-    .PlayList, .header-row {
-      display: table-row;
-
-      & > * {
-        display: table-cell;
-        margin: 0;
-
-        @include seperator-bottom;
-        padding: 0.5em 1em;
-
-        white-space: nowrap;
-        overflow: hidden;
-        text-overflow: ellipsis;
-
-        &.inline-list > * {
-          display: inline-block;
-          white-space: nowrap;
-          margin-right: 0.5em;
-
-          &:after {
-            content: ',';
-          }
-          &:last-child:after {
-            content: '';
-          }
-
-          & > * {
-            display: inline-block;
-            margin-right: 0;
-          }
-        }
-
-        &.duration, &.header-Length {
-          width: 12em;
-        }
-      }
-    }
+    @include playlist-table;
+    margin-top: 15px;
   }
 }
