--- a/imports/ui/stylesheets/variables.scss
+++ b/imports/ui/stylesheets/variables.scss
@@ -148,7 +148,7 @@ $small-music-image: 5.5em;
   .album-image, .header-Cover {
     width: $small-music-image;
   }
-  .header-Length, .duration {
+  .header-Length, .duration, .ServiceLinks {
     width: 4.5em;
   }
 }
