--- a/imports/ui/music/PlayList/PlayList.scss
+++ b/imports/ui/music/PlayList/PlayList.scss
@@ -6,16 +6,22 @@
 
   &.page-viewtype {
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: center;
-    margin: 0 -10px;
+    flex-flow: column;
+    height: 100%;
 
-    & > * {
-      margin: 10px;
-    }
-    .item-header {
-      width: 100%;
+    .playlist-details {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+      align-items: center;
+      margin: 0 -10px;
+
+      & > * {
+        margin: 10px;
+      }
+      .item-header {
+        width: 100%;
+      }
     }
   }
 
@@ -28,6 +34,7 @@
   /* TODO Inline layout and remove some details on small screens */
   .tracks-wrapper {
     width: 100%;
+    
 
     .tracks {
       @include track-table;
