--- a/imports/ui/music/PlayList/PlayList.scss
+++ b/imports/ui/music/PlayList/PlayList.scss
@@ -34,7 +34,12 @@
   /* TODO Inline layout and remove some details on small screens */
   .tracks-wrapper {
     width: 100%;
-    
+    height: 100%;
+    overflow-y: auto;
+
+    .scrollarea {
+      height: 100%;
+    }
 
     .tracks {
       @include track-table;
