Refactor navigation. Use Access module to determine nav item visibility.

--- a/imports/ui/page/App/App.scss
+++ b/imports/ui/page/App/App.scss
@@ -26,9 +26,12 @@ body {
     }
   }
 
-  .navbar .container {
-    width: 100%;
-    padding: 0;
+  .navbar {
+    margin-bottom: 10px;
+    .container {
+      width: 100%;
+      padding: 0;
+    }
   }
 
   > .container {
