Add basic own library. Add Compiler lists. Style improvements.

--- a/imports/ui/music/PlayList/PlayList.scss
+++ b/imports/ui/music/PlayList/PlayList.scss
@@ -9,7 +9,7 @@
     flex-flow: column;
     height: 100%;
 
-    .playlist-details {
+    .item-details {
       display: flex;
       flex-wrap: wrap;
       justify-content: space-between;
