--- a/imports/ui/stylesheets/app.scss
+++ b/imports/ui/stylesheets/app.scss
@@ -14,37 +14,45 @@ a, a:hover, a:visited, a:active, a:focus {
   outline: none;
 }
 
-.item-header, .item-header a, .header-cell, h1, h2, h3, h4, h5, h6 {
+.item-header, .item-header a, h1, h2, h3, h4, h5, h6 {
   color: $cb-blue;
   font-weight: bold;
 }
 
 .inline-list {
-  display: flex;
-  flex-wrap: wrap;
+  > *, > .data > * {
+    display: inline-block;
+    white-space: nowrap;
+    padding: 0;
+    margin-right: 0.3em;
+    border-style: none;
 
-  &> * {
-    margin-right: 0.4em;
-    padding-right: 0.4em;
-    border-right: 1px solid rgba(255, 255, 255, 0.5);
+    &:after {
+      content: ',';
+    }
+    &:last-child:after {
+      content: '';
+    }
 
-    &.label,
-    &:last-child {
-      border-right: none;
+    & > * {
+      display: inline-block;
+      margin-right: 0;
     }
   }
 }
 
-.item-header {
-  display: flex;
-  justify-content: space-between;
-  @include seperator-bottom;
 
-  &> * {
-    margin-right: 0.5em;
+.page-viewtype {
+  > .item-header,
+  > .item-details > .item-header {
+    display: flex;
+    justify-content: space-between;
+    margin: 0 -0.5em;
+    @include seperator-bottom;
+    font-size: 150%;
 
-    &:last-child {
-      margin-right: 0;
+    &> * {
+      margin: 0 0.5em;
     }
   }
 }
