--- a/imports/ui/music/PlayList/PlayList.scss
+++ b/imports/ui/music/PlayList/PlayList.scss
@@ -14,13 +14,14 @@
       flex-wrap: wrap;
       justify-content: space-between;
       align-items: center;
-      margin: 0 -10px;
+      margin: -10px;
 
       & > * {
         margin: 10px;
       }
       .item-header {
         width: 100%;
+        margin: 10px 0 0 0;
       }
     }
   }
@@ -36,13 +37,11 @@
     width: 100%;
     height: 100%;
     overflow-y: auto;
+    margin-top: 10px;
+    margin-right: -10px;
 
     .scrollarea {
       height: 100%;
-    }
-
-    .tracks {
-      @include track-table;
     }
   }
 }
