--- a/imports/ui/page/App/App.scss
+++ b/imports/ui/page/App/App.scss
@@ -27,7 +27,8 @@ body {
   }
 
   .navbar {
-    margin-bottom: 10px;
+    margin-bottom: 5px;
+
     .container {
       width: 100%;
       padding: 0;
@@ -39,10 +40,11 @@ body {
     overflow: auto;
     border-radius: $default-border-radius;
     width: 100%;
+    padding: 0 10px;
 
     > * {
       width: 100% !important;
-      margin: 0 auto;
+      margin: 0;
     }
   }
 
