--- a/imports/ui/stylesheets/variables.scss
+++ b/imports/ui/stylesheets/variables.scss
@@ -120,6 +120,10 @@ $default-border-radius: 4px;
   .ServiceLinks {
     width: 4em;
   }
+  .header-Menu {
+    width: 5em;
+    color: transparent; /* display: none  breaks table column width */
+  }
 }
 
 
