--- a/imports/ui/music/IconsAndLinks/IconsAndLinks.scss
+++ b/imports/ui/music/IconsAndLinks/IconsAndLinks.scss
@@ -1,7 +1,10 @@
 .IconsAndLinks .wrapper {
-  display: flex;
-  flex-wrap: wrap;
   margin: -3px;
+  & > * {
+    float: right;
+    display: inline-block;
+    margin: 3px;
+  }
 }
 
 .service-link {
@@ -9,7 +12,6 @@
   height: 16px;
   background: transparent no-repeat center center;
   background-size: contain;
-  margin: 3px;
 
   &.needsreview {
     font-weight: bold;
@@ -25,4 +27,10 @@
   &.musicbrainz {
     background-image: url('/musicbrainz.png');
   }
+}
+
+.spotify-player-wrapper {
+  width: 80px;
+  height: 80px;
+  overflow: hidden;
 }
