--- a/imports/ui/stylesheets/variables.scss
+++ b/imports/ui/stylesheets/variables.scss
@@ -114,14 +114,12 @@ $default-border-radius: 4px;
   }
 
   .header-Icons {
-    width: 5em;
+    /*width: 120px; /* For when spotify player enabled */
+    width: 70px;
     color: transparent; /* display: none  breaks table column width */
   }
-  .ServiceLinks {
-    width: 5em;
-  }
   .header-Menu {
-    width: 5em;
+    width: 2em;
     color: transparent; /* display: none  breaks table column width */
   }
 }
