--- a/imports/ui/music/IconsAndLinks/IconsAndLinks.scss
+++ b/imports/ui/music/IconsAndLinks/IconsAndLinks.scss
@@ -8,8 +8,8 @@
 }
 
 .service-link {
-  width: 16px;
-  height: 16px;
+  width: 20px;
+  height: 20px;
   background: transparent no-repeat center center;
   background-size: contain;
 
@@ -23,9 +23,11 @@
   &.spotify {
     background-image: url('/spotify.png');
   }
-
   &.musicbrainz {
     background-image: url('/musicbrainz.png');
+  }
+  &.youtube {
+    background-image: url('/youtube.png');
   }
 }
 
