--- a/imports/ui/music/User/User.scss
+++ b/imports/ui/music/User/User.scss
@@ -14,4 +14,14 @@
       margin: 0 1em;
     }
   }
+
+  .playlists-header {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    margin: -10px;
+    & > * {
+      margin: 10px;
+    }
+  }
 }
