--- a/imports/ui/music/PlayListList/PlayListList.scss
+++ b/imports/ui/music/PlayListList/PlayListList.scss
@@ -2,7 +2,7 @@
 
 /* TODO Inline layout and remove some details on small screens */
 
-.PlayListList {
+.PlayListList.page-viewtype {
   @include playlist-table;
   margin-top: 15px;
 }
