--- a/imports/ui/stylesheets/variables.scss
+++ b/imports/ui/stylesheets/variables.scss
@@ -148,3 +148,15 @@ $small-music-image: 5.5em;
     width: 4.5em;
   }
 }
+
+
+@mixin flex-row-wrap {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  margin: -5 -10px -10px -10px;
+  & > * {
+    margin: 10px;
+  }
+}
