--- a/imports/ui/stylesheets/variables.scss
+++ b/imports/ui/stylesheets/variables.scss
@@ -113,7 +113,7 @@ $default-border-radius: 4px;
     }
   }
 
-  .header-Icons {
+  .header-Icons, .IconsAndLinks {
     /*width: 120px; /* For when spotify player enabled */
     width: 85px;
     color: transparent; /* display: none  breaks table column width */
@@ -155,7 +155,7 @@ $small-music-image: 5.5em;
   justify-content: space-between;
   align-items: center;
   flex-wrap: wrap;
-  margin: -5 -10px -10px -10px;
+  margin: -5px -10px -10px -10px;
   & > * {
     margin: 10px;
   }
