Misc bug fixes and improvements.

--- a/imports/ui/music/PlayList/PlayList.scss
+++ b/imports/ui/music/PlayList/PlayList.scss
@@ -51,3 +51,9 @@
     justify-content: space-between;
   }
 }
+
+
+.PlayListList.page-viewtype, .PlayListList.list-viewtype {
+  @include playlist-table;
+  margin-top: 15px;
+}
