Show last JD list for eack track in a playlist.

--- a/imports/ui/stylesheets/variables.scss
+++ b/imports/ui/stylesheets/variables.scss
@@ -147,6 +147,10 @@ $small-music-image: 5.5em;
   .header-Length, .duration {
     width: 4.5em;
   }
+
+  .header-Last-list {
+    width: 10%;
+  }
 }
 
 
