Allow updating Compiler name. CSS tweaks.

--- a/imports/ui/music/Compiler/Compiler.scss
+++ b/imports/ui/music/Compiler/Compiler.scss
@@ -6,6 +6,10 @@
     @include flex-row-wrap;
   }
 
+  .header-Icons, .IconsAndLinks {
+    width: 25px;
+  }
+
   .compilers {
     @include playlist-table;
     margin-top: 15px;
