--- a/imports/ui/music/PlayList/PlayList.scss
+++ b/imports/ui/music/PlayList/PlayList.scss
@@ -36,6 +36,7 @@
     width: 100%;
     height: 100%;
     overflow-y: auto;
+    overflow-x: hidden;
     margin-top: 10px;
     margin-right: -10px;
 
@@ -52,8 +53,14 @@
   }
 }
 
+.PlayListList {
+  &.page-viewtype,
+  &.list-viewtype {
+    @include playlist-table;
+    margin-top: 15px;
+  }
 
-.PlayListList.page-viewtype, .PlayListList.list-viewtype {
-  @include playlist-table;
-  margin-top: 15px;
+  .header-Icons, .IconsAndLinks {
+    width: 25px;
+  }
 }
