--- a/imports/ui/music/Track/Track.scss
+++ b/imports/ui/music/Track/Track.scss
@@ -42,4 +42,16 @@
 
 .TrackList {
   @include track-table;
+
+  .list-compact-viewtype {
+    .header-Icons, .IconsAndLinks {
+      width: 105px;
+    }
+  }
+
+  .list-viewtype { // not compact view
+    .header-Icons, .IconsAndLinks {
+      width: 55px;
+    }
+  }
 }
