--- a/imports/ui/stylesheets/variables.scss
+++ b/imports/ui/stylesheets/variables.scss
@@ -149,6 +149,18 @@ $small-music-image: 5.5em;
   .header-Last-list {
     width: 10%;
   }
+
+  .list-compact-viewtype {
+    .header-Icons, .IconsAndLinks {
+      width: 105px;
+    }
+  }
+
+  .list-viewtype { // not compact view
+    .header-Icons, .IconsAndLinks {
+      width: 55px;
+    }
+  }
 }
 
 
