Improve search by track name, artist, album. Change general search scoring.
Better handling of misspelt names, and try variations when searching
services. Don't use product term in search score (too sensitive to short
terms).

--- a/imports/ui/music/Import/Import.scss
+++ b/imports/ui/music/Import/Import.scss
@@ -44,6 +44,10 @@
     margin-top: 20px;
   }
 
+  .btn {
+    font-weight: bold;
+  }
+  
   &> * {
     @include seperator-bottom;
     border-bottom: 1px solid #fff;
