--- a/imports/ui/misc/Expand/Expand.scss
+++ b/imports/ui/misc/Expand/Expand.scss
@@ -4,11 +4,21 @@
   text-align: center;
   cursor: pointer;
   font-family: FontAwesome;
+  margin-left: 8px;
 
   &.expanded:before {
     content: "\f0d7";
   }
   &.collapsed:before {
     content: "\f0d8";
+  }
+}
+
+.Expandable {
+  display: flex;
+  overflow-y: hidden;
+
+  &.expanded .ellipsis {
+    color: transparent;
   }
 }
