--- a/imports/ui/music/PlayList/PlayList.scss
+++ b/imports/ui/music/PlayList/PlayList.scss
@@ -22,6 +22,11 @@
         width: 100%;
         margin: 10px 0 0 0;
       }
+      .notes {
+        width: 100%;
+        display: flex;
+        margin: 5px 10px 10px 10px;
+      }
     }
   }
 
