--- a/imports/ui/misc/EditInline/EditInline.scss
+++ b/imports/ui/misc/EditInline/EditInline.scss
@@ -1,13 +1,5 @@
 @import '../../stylesheets/variables';
 
-textarea.riek {
-  width: 90%;
-  min-height: 5em;
-}
-
-input.riek[type=color] {
-  display: none;
-}
 
 .edit-inline-color-container {
   line-height: 0;
@@ -25,7 +17,7 @@ input.riek[type=color] {
   display: flex;
 
   .edit-icon {
-    margin: 0;
+    margin: 0 0 0 5px;
     width: 20px;
     text-align: center;
     font-size: 10px;
@@ -62,5 +54,18 @@ input.riek[type=color] {
     white-space:pre-line;
     word-break: normal;
     word-wrap: normal;
+  }
+
+  &.textarea {
+    width: 100%;
+    textarea {
+      width: 100%;
+      min-height: 5em;
+    }
+  }
+
+
+  &.color input {
+    display: none;
   }
 }
